@@ -40,29 +40,6 @@ void *e_modapi_init (E_Module *module)
 {
 	Embrace *embrace = NULL;
 
-	/* check module api version */
-	if (module->api->version < E_MODULE_API_VERSION) {
-		E_Dialog *dia;
-		char buf[4096];
-
-		dia = e_dialog_new (e_container_current_get (e_manager_current_get ()));
-		if (!dia)
-			return NULL;
-
-		snprintf (buf, sizeof (buf),
-		          _("Module API Error<br>Error initializing Module: Embrace<br>"
-		            "It requires a minimum module API version of: %i.<br>"
-		            "The module API advertized by Enlightenment is: %i.<br>"), 
-		          E_MODULE_API_VERSION, module->api->version);
-
-		e_dialog_title_set (dia, "Enlightenment Embrace Module");
-		e_dialog_icon_set (dia, "enlightenment/e", 64);
-		e_dialog_text_set (dia, buf);
-		e_dialog_button_add (dia, _("Ok"), NULL, NULL, NULL);
-		e_win_centered_set (dia->win, 1);
-		e_dialog_show (dia);
-		return NULL;
-	}
 	/* actually init embrace */
 	embrace = embrace_module_new ();
 	module->config_menu = embrace_config_menu_new ();
